# nos3-crust

./: .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  Vagrantfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-BUG_REPORT.yml  2-FEATURE_REQUEST.yml
.github/workflows/: build.yml
cfg/: nos3-mission.xml
cfg/InOut/: Inp_Graphics.txt  Inp_Graphics_Gateway.txt  Inp_IPC.shmem.txt  Inp_IPC.sockets.txt  Inp_NOS3.txt  Inp_Sim.txt  Inp_Sim_Gateway.txt  Orb_NRHO.txt  SC_Gateway.txt  SC_NOS3.txt  SC_SensorFOV.txt
cfg/nos3_defs/: cpu1_cfe_es_startup.scr  cpu1_device_cfg.h  default_osconfig.cmake  global_build_options.cmake  targets.cmake
cfg/nos3_defs/tables/: ds_file_tbl.c  ds_filter_tbl.c  ds_indices.h  lc_def_adt.c  lc_def_wdt.c  sc_ats1.c  sc_rts001.c  sc_rts025.c  sc_rts026.c  sc_rts027.c  sc_rts028.c  sc_rts029.c  sc_rts030.c  sc_rts031.c  sc_rts032.c  sc_rts033.c  sc_rts034.c  sc_rts035.c  sc_rts036.c  sc_rts037.c  sch_def_msgtbl.c  sch_def_schtbl.c  to_config.c  to_lab_sub.c
cfg/sims/: nos3-simulator.shmem.xml  nos3-simulator.sockets.xml  nos3-simulator.xml  nos_engine_server_config.json
cfg/spacecraft/: sc-fprime-config.xml  sc-minimal-config.xml  sc-mission-config.xml  sc-research-config.xml
components/tcs/: LICENSE  README.md
components/tcs/fsw/cfs/: CMakeLists.txt
components/tcs/fsw/cfs/mission_inc/: tcs_perfids.h
components/tcs/fsw/cfs/platform_inc/: tcs_msgids.h  tcs_platform_cfg.h
components/tcs/fsw/cfs/src/: tcs_app.c  tcs_app.h  tcs_events.h  tcs_msg.h  tcs_version.h
components/tcs/fsw/cfs/unit-test/: CMakeLists.txt
components/tcs/fsw/cfs/unit-test/coveragetest/: coveragetest_tcs_app.c  coveragetest_tcs_device.c  tcs_app_coveragetest_common.h
components/tcs/fsw/cfs/unit-test/inc/: ut_tcs_app.h
components/tcs/fsw/cfs/unit-test/stubs/: tcs_device_stubs.c
components/tcs/fsw/fprime/: library.cmake
components/tcs/fsw/fprime/mission_inc/: tcs_perfids.h
components/tcs/fsw/fprime/platform_inc/: tcs_msgids.h  tcs_platform_cfg.h
components/tcs/fsw/fprime/sample_src/: CMakeLists.txt  TcsSim.cpp  TcsSim.fpp  TcsSim.hpp
components/tcs/fsw/fprime/sample_src/docs/: sdd.md
components/tcs/fsw/shared/: tcs_device.c  tcs_device.h
components/tcs/fsw/standalone/: CMakeLists.txt  device_cfg.h  tcs_checkout.c  tcs_checkout.h
components/tcs/gsw/: TCS_SIM_CMD.txt  tcs.xtce
components/tcs/gsw/TCS/cmd_tlm/: TCS_CMD.txt  TCS_TLM.txt
components/tcs/gsw/TCS/lib/: tcs_lib.rb
components/tcs/gsw/TCS/procedures/: tcs_test.rb
components/tcs/gsw/TCS/procedures/tests/: tcs_app_test.rb  tcs_ast_test.rb  tcs_device_test.rb
components/tcs/sim/: CMakeLists.txt
components/tcs/sim/inc/: tcs_42_data_provider.hpp  tcs_data_point.hpp  tcs_data_provider.hpp  tcs_hardware_model.hpp  tcs_shmem_data_provider.hpp
components/tcs/sim/src/: tcs_42_data_provider.cpp  tcs_data_point.cpp  tcs_data_provider.cpp  tcs_hardware_model.cpp  tcs_shmem_data_provider.cpp
docs/wiki/: Architecture.md  Home.md  NOS3_Architecture.md  NOS3_Build_and_Run_on_Multiple_VMs.md  NOS3_Components.md  NOS3_Flight_Software.md  NOS3_Generating_Component.md  NOS3_Getting_Started.md  NOS3_Ground_Software.md  NOS3_Install_Build_Run_QuickStart.md  STF_ConOps.md  STF_QuickLook.md  STF_Software_Development_Plan.md  STF_VV_Plan.md  Scenario_ADCS_Walkthrough.md  Scenario_COSMOS.md  Scenario_Commissioning.md  Scenario_Constellation_with_Lunar_Focus.md  Scenario_Controlling_ADCS_During_Science.md  Scenario_Creating_Unit_Tests.md  Scenario_Demo.md  Scenario_Encryption.md  Scenario_Fault_Science.md  Scenario_Flight_Build.md  Scenario_GPS_Spoofing.md  Scenario_Install.md  Scenario_Low_Power.md  Scenario_Nominal_Ops.md  Scenario_Patching.md  Scenario_Random_Errors.md  Scenario_Rapid_Tumbling.md  Scenario_Run_Checkout_GDB.md  Scenario_SimulatorExpansion.md  Scenario_cFS.md  index.rst
docs/wiki/_static/: STF_Modes.drawio
scripts/: checkout.sh  ci_launch.sh  env.sh  sidecar.sh  stop.sh  system_tests.sh
scripts/cfg/: config.sh  configure.py  configure_cosmos_target.py  configure_test_runner.py  declare_cosmos_target.py  prepare.sh  uninstall.sh
scripts/fsw/: fsw_cfs_launch.sh  fsw_fprime_launch.sh  launch_sat.sh
scripts/gsw/: build_cryptolib.sh  gsw_ait_launch.sh  gsw_cosmos_build.sh  gsw_cosmos_launch.sh  gsw_fprime_launch.sh  gsw_openc3_build.sh  gsw_openc3_clean.sh  gsw_openc3_launch.sh  gsw_yamcs_launch.sh  launch_gsw.sh  stop_gsw.sh  system_test.rb
